@@ -1,22 +1,0 @@
-#!/bin/sh
-# usage: cov [DIR]
-# display documentation coverage
-
-if [ x"$1" = x ] ; then
-    dir=".."
-else
-    dir="$1"
-fi
-
-all=`sed '/^PG_DEFINE/!d;s/[^"]*"//;s/".*//' $dir/libpostgres*.c`
-
-for p in $all ; do
-    if grep -q "$p" guile-pg.texi ; then
-        echo -n 'yes'
-    else
-        echo -n ' no'
-    fi
-    echo "     $p"
-done
-
-# cov ends here
